--- a/css/_color.scss
+++ b/css/_color.scss
@@ -14,9 +14,9 @@ h2, h3, h4{
     color: $font-color;
 }
 p{
-    color: $font-color;
+    color: $font-colosr;
 }
 
-html{
-    color: pink;
-}
+// html{
+//     color: pink;
+// }
