--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@ $background-color:  whitesmoke;
 
 .main{
     position: relative;
-    padding: 80px 80px 130px 100px;
+    // padding: 80px 80px 130px 100px;
 
     .right-side{
         position: absolute;
