Added picture etc

--- a/css/_color.scss
+++ b/css/_color.scss
@@ -14,9 +14,6 @@ h2, h3, h4{
     color: $font-color;
 }
 p{
-    color: $font-colosr;
+    color: $font-color;
 }
 
-// html{
-//     color: pink;
-// }
